opam-version: "2.0"
name: "iter"
version: "1.7"
authors: ["Simon Cruanes" "Gabriel Radanne"]
maintainer: "simon.cruanes.2007@m4x.org"
license: "BSD-2-clause"
synopsis: "Simple abstraction over `iter` functions, intended to iterate efficiently on collections while performing some transformations"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test & arch != "arm32" & arch != "x86_32"}
]
depends: [
  "ocaml" { >= "4.08.0" }
  "dune" { >= "2.0" }
  "qcheck-core" {with-test}
  "ounit2" {with-test}
  "mdx" {with-test & >= "1.3" }
  "odoc" {with-doc}
  "containers" {with-test}
]
tags: [ "iter" "iterator" "iter" "fold" ]
homepage: "https://github.com/c-cube/iter/"
depopts: [
  "base-bigarray"
]
doc: "https://c-cube.github.io/iter/doc/"
bug-reports: "https://github.com/c-cube/iter/issues"
dev-repo: "git+https://github.com/c-cube/iter.git"
