opam-version: "1.2"
name: "sequence"
version: "1.0"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
license: "BSD-2-clauses"
build: [
    [make "build"]
]
install: ["jbuilder" "install"]
build-doc: [
  [make "doc"]
]
build-test: [
  [make "test"]
]
remove: [
    ["ocamlfind" "remove" "sequence"]
]
depends: [
  "ocamlfind" {build}
  "base-bytes"
  "result"
  "jbuilder" {build}
  "qcheck" {test}
  "qtest" {test}
  "odoc" {doc}
]
tags: [ "sequence" "iterator" "iter" "fold" ]
homepage: "https://github.com/c-cube/sequence/"
depopts: [
  "base-bigarray"
]
doc: "https://c-cube.github.io/sequence/"
bug-reports: "https://github.com/c-cube/sequence/issues"
dev-repo: "https://github.com/c-cube/sequence.git"
