opam-version: "2.0"
name: "sequence"
version: "1.1"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
license: "BSD-2-clauses"
synopsis: "Compatibility package for `iter`"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
]
depends: [
  "iter"
]
tags: [ "sequence" "iterator" "iter" "fold" ]
homepage: "https://github.com/c-cube/iter/"
depopts: [
  "base-bigarray"
]
doc: "https://c-cube.github.io/iter/"
bug-reports: "https://github.com/c-cube/iter/issues"
dev-repo: "git+https://github.com/c-cube/iter.git"
